fixing output path

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=500" />
   <title>Simple HiGlass</title>
 
-  <script src="dist/main.js"></script>
+  <script src="./dist/main.js"></script>
 
-  <link rel="stylesheet" href="../node_modules/higlass/app/styles/page.css">
+  <link rel="stylesheet" href="./node_modules/higlass/app/styles/page.css">
   <link rel="stylesheet" href="https://unpkg.com/higlass@1.0.1/dist/styles/hglib.css" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.6.2/react.min.js"></script>
